2010-10-28  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * data/filetypes.xml:
   Match data-* and aria-* as HTML attributes.
 * data/colorschemes/alt.conf, data/filetypes.common,
   data/filetypes.python:
   Make Python use named styles for color scheme support - use
   alt.conf color scheme if you want the old colors.
   Add named style 'function'.


2010-10-27  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/filetypes.c, src/ui_utils.c:
   Fix notebook tab menu icons using theme for "text/plain" filetypes.
   Make filetype mime_type "text/plain" instead of NULL.


2010-10-26  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/interface.c, doc/geany.txt, doc/geany.html, geany.glade:
   Edit XML tag autocompletion pref and tooltip to include HTML.
 * doc/geany.txt, doc/geany.html:
   Add docs for 'Ensure consistent line endings' pref.
 * src/keyfile.c:
   Change default for 'Override Geany keybindings' to on.
 * src/filetypes.c:
   Sort filetypes_by_title last instead of on insertion to prevent
   exponential time.
 * src/ui_utils.h, src/filetypes.c, src/filetypes.h, src/ui_utils.c:
   Add filetype mimetype field (patch by Colomban Wendling, thanks).
 * src/sidebar.c, src/document.c:
   Show mimetype icon in sidebar Documents list (patch by Colomban
   Wendling, thanks).
 * src/ui_utils.c:
   Add notebook tab document icons (based on patch by Colomban
   Wendling, thanks).
 * src/filetypes.c:
   Leave text/plain mime_type fields as NULL (like custom filetypes).


2010-10-25  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/editor.c, data/snippets.conf:
   Move HTML automatic <table> tag completion into a 'table' snippet
   so the user can decide when to use it (patch by Eugene Arshinov,
   thanks).
 * src/interface.c, src/prefs.c, src/about.c, src/keyfile.c,
   src/document.c, src/document.h, THANKS, geany.glade:
   Add 'Ensure consistent line endings' file saving pref (patch by